--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+@media screen and (max-width: 480px) {
+  body {
+    background-color: teal;
+    color: white;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  body {
+    background-color: orange;
+    color: white;
+  }
+}
+
 .column {
   width:350px;
   float: left;
